WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253014
REGRESSION (
257937@main
): Hover state UI leaves graphic artifacts on Techmeme.com
https://bugs.webkit.org/show_bug.cgi?id=253014
Summary
REGRESSION (257937@main): Hover state UI leaves graphic artifacts on Techmeme...
alan
Reported
2023-02-27 11:59:42 PST
<
rdar://104612196
>
Attachments
[fast-cq]Patch
(4.85 KB, patch)
2023-02-27 12:06 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-02-27 12:06:02 PST
Created
attachment 465203
[details]
[fast-cq]Patch
EWS
Comment 2
2023-02-27 17:29:05 PST
Committed
260913@main
(2c2474150607): <
https://commits.webkit.org/260913@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 465203
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug