REGRESSION (257937@main): Hover state UI leaves graphic artifacts on Techmeme.com https://bugs.webkit.org/show_bug.cgi?id=253014 <rdar://104612196>

Reviewed by Antti Koivisto.

This patch ensures that when the line layout path gets invalidated (and we eagerly destroy geometry information -there's a FIXME on that)
both in-, and out-of-flow content get repainted.
(This is the case when calling repaint on an absolute positioned box nested in a relative positioned inline box
(e.g. <span style="position: relative"><div style="position: absolute"></div></span>
ends up in RenderInline::offsetForInFlowPositionedInline which needs display box geometry information -which we eagerly destroy; see above).

* LayoutTests/fast/repaint/out-of-flow-inside-relative-inline-expected.txt: Added.
* LayoutTests/fast/repaint/out-of-flow-inside-relative-inline.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::invalidateLineLayoutPath):

Canonical link: https://commits.webkit.org/260913@main